org.lflang.lfc/test/resources/org/lflang/lfc/tests/simpleWarning.stderr
lfc: error: Unrecognized target: unknown
--> test/resources/org/lflang/lfc/tests/simpleWarning.lf:1:8
  |
1 | target unknown;
  |        ^^^^^^^ Unrecognized target: unknown
  |
2 |

lfc: error: Name of main reactor must match the file name (or be omitted).
--> test/resources/org/lflang/lfc/tests/simpleWarning.lf:3:14
  |
2 |
3 | main reactor Foo {
  |              ^^^ Name of main reactor must match the file name (or be omitted).
  |
4 |
